# app/controllers/api/rules_controller.rb
@@ -18,11 +18,19 @@ module Api
     def create
       command = create_command
       command_bus.call(command)
-      render json: read_model.find(command.id)
+      render json: read_model.find(command.id), status: :created
     end
 
-    def update
-      command = update_command
+    def patch 
+      rule = read_model.find(params[:id])
+      serialized_rule = RuleRepresenter.new(rule).to_hash
+      patched_representation = JSON::Patch.new(serialized_rule, patch_operations).call
+      updated_by = SecureRandom.uuid
+      command = Evaluation::Commands::UpdateRule.new(
+        **patched_representation,
+        'updated_by' => updated_by,
+        'pipeline_id' => params['pipeline_id'],
+      )
       command_bus.call(command)
       render json: read_model.find(command.id)
     end
@@ -33,27 +41,19 @@ module Api
       RuleReadModel.new
     end
 
-   def create_command
-     created_by = SecureRandom.uuid
-     Evaluation::Commands::CreateRule.new(
-       **create_params,
-       'created_by' => created_by,
-     )
-   end
-
-   def update_command
-     created_by = SecureRandom.uuid
-     Evaluation::Commands::UpdateRule.new(
-       **update_params,
-       'created_by' => created_by,
-     )
-   end
-
-    def create_params
-      params.permit!
+    def create_command
+      created_by = SecureRandom.uuid
+      Evaluation::Commands::CreateRule.new(
+        **create_params,
+        'created_by' => created_by,
+      )
     end
 
-    def update_params
+    def patch_operations
+      params.permit!['_json'].map(&:to_h)
+    end
+
+    def create_params
       params.permit!
     end
   end
