# app/domain/evaluation/command_handlers/activate_pipeline_rule_handler.rb
@@ -4,8 +4,8 @@ module Evaluation
   module CommandHandlers
     class ActivatePipelineRuleHandler < PipelineHandler
       def call(command)
-        with_pipeline(command.id) do |row|
-          pipeline.activate_rule(rule_id: command.rule_id, updated_by: command.updated_by)
+        with_pipeline(command.pipeline_id) do |pipeline|
+          pipeline.activate_rule(rule_id: command.id, updated_by: command.updated_by)
         end
       end
     end
